# Cluster_solution

./: .gitignore  MANIFEST.in  README.md  business_requirement.txt  pyproject.toml
autoaicluster/: __init__.py
enterprise_cluster_solution/: __init__.py  pipeline.py  python_api.py  server.py
enterprise_cluster_solution/ui/: index.html
enterprise_cluster_solution/ui/assets/: .gitkeep
