[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-cluster-solution"
version = "0.1.0"
description = "Enterprise-grade clustering solution with local web UI for preprocessing, clustering, and visualization."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Enterprise Cluster Team" }
]
license = { text = "MIT" }
keywords = ["clustering", "ml", "fastapi", "pipeline", "visualization"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Framework :: FastAPI",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.22",
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "scikit-learn-extra>=0.3.0",
  "plotly>=5.20",
  "pydantic>=2.5",
  "python-multipart>=0.0.9",
  "umap-learn>=0.5.6",
]

[project.urls]
Homepage = "https://example.com/enterprise-cluster-solution"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["enterprise_cluster_solution*"]

[tool.setuptools.package-data]
enterprise_cluster_solution = ["ui/*", "ui/assets/*"]